--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hapi/joi": "^15.1.0",
     "@types/hapi__joi": "^15.0.2",
+    "axios": "^0.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
