--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@hapi/joi": "^15.1.0",
     "@types/hapi__joi": "^15.0.2",
     "axios": "^0.19.0",
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.4"
   },
   "devDependencies": {
     "faker": "^4.1.0",
