--- a/population/package.json
+++ b/population/package.json
@@ -5,7 +5,7 @@
   "main": "express.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "express.js",
+    "start": "node app.js",
     "watch": "express.js"
   },
   "author": "",
@@ -16,8 +16,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.2.7",
-    "mongoose": "^5.6.4"
+    "joi": "^14.3.1"
   },
   "devDependencies": {
     "faker": "^4.1.0",
